Name:		toysolver
Version:	0.7.0
License:	BSD3
License-File:	COPYING
Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
Maintainer:	masahiro.sakai@gmail.com
Category:	Algorithms, Optimisation, Optimization, Theorem Provers, Constraints, Logic, Formal Methods, SMT
Cabal-Version:	2.0
Synopsis:	Assorted decision procedures for SAT, SMT, Max-SAT, PB, MIP, etc
Description:	Toy-level solver implementation of various problems including SAT, SMT, Max-SAT, PBS/PBO (Pseudo Boolean Satisfaction/Optimization), MILP (Mixed Integer Linear Programming) and non-linear real arithmetic.
Homepage:	https://github.com/msakai/toysolver/
Bug-Reports:	https://github.com/msakai/toysolver/issues
Tested-With:
   GHC ==8.0.2
   GHC ==8.2.2
   GHC ==8.4.4
   GHC ==8.6.5
   GHC ==8.8.4
   GHC ==8.10.3
Extra-Source-Files:
   README.md
   CHANGELOG.markdown
   COPYING
   COPYING-GPL
   app/toysat-ipasir/ipasir.h
   app/toysat-ipasir/ipasir.map
   misc/build_bdist_linux.sh
   misc/build_bdist_macos.sh
   misc/build_bdist_win32.sh
   misc/build_bdist_win64.sh
   misc/build_bdist_maxsat_evaluation.sh
   misc/build_bdist_pb_evaluation.sh
   misc/build_bdist_qbf_evaluation.sh
   misc/build_bdist_smtcomp.sh
   misc/maxsat/toysat/README.md
   misc/maxsat/toysat/toysat
   misc/maxsat/toysat_ls/README.md
   misc/maxsat/toysat_ls/toysat_ls
   misc/pb/README.md
   misc/qbf/README.md
   misc/smtcomp/bin/starexec_run_default
   misc/smtcomp/starexec_description.txt
   src/ToySolver/Data/Polyhedron.hs
   src/ToySolver/SAT/Solver/MessagePassing/SurveyPropagation/sp.cl
   samples/gcnf/*.cnf
   samples/gcnf/*.gcnf
   samples/gcnf/edn_20403_8.cnf_0.03000000.unsat.gcnf
   samples/lp/*.lp
   samples/lp/*.sol
   samples/lp/*.txt
   samples/lp/error/*.lp
   samples/maxsat/*.cnf
   samples/maxsat/t3pm3-5555.spn.cnf
   samples/maxsat/*.wcnf
   samples/maxsat/ram_k3_n10.ra1.wcnf
   samples/mps/*.mps
   samples/pbo/*.opb
   samples/pbs/*.opb
   samples/pbs/normalized-1096.cudf.paranoid.opb
   samples/sat/*.cnf
   samples/wbo/*.wbo
   samples/sdp/*.dat
   samples/sdp/*.dat-s
   samples/smt/*.smt2
   samples/smt/*.ys
   samples/qbf/*.qdimacs
   samples/programs/sudoku/*.sdk
   samples/programs/knapsack/README.md
   samples/programs/knapsack/*.txt
   samples/programs/htc/test1.dat
   samples/programs/htc/test2.dat
   samples/programs/svm2lp/a1a
   samples/programs/nonogram/*.cwd
   samples/programs/nonogram/README.md
   samples/programs/numberlink/README.md
   samples/programs/numberlink/ADC2013/*.txt
   samples/programs/numberlink/ADC2014_QA/A/*.txt
   samples/programs/numberlink/ADC2014_QA/Q/*.txt
   samples/programs/numberlink/ADC2016/sample/01/*.txt
   benchmarks/UF250.1065.100/*.cnf
   benchmarks/UUF250.1065.100/*.cnf
Build-Type: Simple

Flag ForceChar8
  Description: set default encoding to char8 (not to use iconv)
  Default: False
  Manual: True

Flag LinuxStatic
  Description: build statically linked binaries
  Default: False
  Manual: True

Flag WithZlib
  Description: Use zlib package to support gzipped files
  Default: True
  Manual: True

Flag BuildToyFMF
  Description: build toyfmf command
  Default: False
  Manual: True

Flag BuildSamplePrograms
  Description: build sample programs
  Default: False
  Manual: True

Flag BuildMiscPrograms
  Description: build misc programs
  Default: False
  Manual: True

Flag UseHaskeline
  Description: use haskeline package
  Manual: True
  Default: True

Flag OpenCL
  Description: use opencl package
  Manual: True
  Default: False

Flag ExtraBoundsChecking
  Description: enable extra bounds checking for debugging
  Manual: True
  Default: False

source-repository head
  type:     git
  location: git://github.com/msakai/toysolver.git

Library
  Exposed: True
  Hs-source-dirs: src
  Build-Depends:
     array >=0.5,
     -- GHC >=8.0
     base >=4.9 && <5,
     bytestring >=0.9.2.1 && <0.11,
     bytestring-builder,
     bytestring-encoding,
     case-insensitive,
     clock >=0.7.1,
     -- IntMap.mergeWithKey and IntMap.toDescList require containers >=0.5.0
     containers >=0.5.0,
     data-default,
     data-default-class,
     data-interval >=2.0.1 && <2.1.0,
     deepseq,
     directory,
     extended-reals >=0.1 && <1.0,
     filepath,
     finite-field >=0.9.0 && <1.0.0,
     -- hashUsing is available on hashable >=1.2
     hashable >=1.2 && <1.4.0.0,
     hashtables,
     heaps,
     intern >=0.9.1.2 && <1.0.0.0,
     log-domain,
     -- numLoopState requires loop >=0.3.0
     loop >=0.3.0 && < 1.0.0,
     MIP >=0.1.1.0 && <0.2,
     mtl >=2.1.2,
     multiset,
     -- createSystemRandom requires mwc-random >=0.13.1.0
     mwc-random >=0.13.1 && <0.15,
     OptDir,
     lattices,
     megaparsec >=5 && <10,
     -- Text.PrettyPrint.HughesPJClass is available on pretty >=1.1.2.0
     pretty >=1.1.2.0 && <1.2,
     primes,
     primitive >=0.6,
     process >=1.1.0.2,
     pseudo-boolean >=0.1.3.0 && <0.2.0.0,
     queue,
     scientific,
     semigroups >=0.17,
     sign >=0.2.0 && <1.0.0,
     stm >=2.3,
     template-haskell,
     temporary >=1.2,
     text >=1.1.0.0,
     -- defaultTimeLocale is available on time >=1.5.0
     time >=1.5.0,
     transformers >=0.2,
     transformers-compat >=0.3,
     unordered-containers >=0.2.3 && <0.3.0,
     -- imapM and modify are available on vector >=0.11.0
     vector >=0.11,
     vector-space >=0.8.6,
     xml-conduit
  if flag(WithZlib)
     Build-Depends: zlib
     CPP-Options: "-DWITH_ZLIB"
  if flag(OpenCL)
     Build-Depends: OpenCL >=1.0.3.4
     Exposed-Modules: ToySolver.SAT.Solver.MessagePassing.SurveyPropagation.OpenCL
  if flag(ExtraBoundsChecking)
     CPP-Options: "-DEXTRA_BOUNDS_CHECKING"
  if impl(ghc)
     Build-Depends: ghc-prim
  Default-Language: Haskell2010
  Other-Extensions:
     BangPatterns
     CPP
     ConstraintKinds
     DeriveDataTypeable
     ExistentialQuantification
     FlexibleContexts
     FlexibleInstances
     FunctionalDependencies
     GADTs
     GeneralizedNewtypeDeriving
     InstanceSigs
     KindSignatures
     MultiParamTypeClasses
     OverloadedStrings
     Rank2Types
     RecursiveDo
     ScopedTypeVariables
     TemplateHaskell
     TypeFamilies
     TypeOperators
     TypeSynonymInstances
     UndecidableInstances
  if impl(ghc)
     Other-Extensions:
        MagicHash
        UnboxedTuples
  Exposed-Modules:
     ToySolver.Arith.BoundsInference
     ToySolver.Arith.CAD
     ToySolver.Arith.ContiTraverso
     ToySolver.Arith.Cooper
     ToySolver.Arith.Cooper.Base
     ToySolver.Arith.Cooper.FOL
     ToySolver.Arith.DifferenceLogic
     ToySolver.Arith.FourierMotzkin
     ToySolver.Arith.FourierMotzkin.Base
     ToySolver.Arith.FourierMotzkin.FOL
     ToySolver.Arith.FourierMotzkin.Optimization
     ToySolver.Arith.LPUtil
     ToySolver.Arith.MIP
     ToySolver.Arith.OmegaTest
     ToySolver.Arith.OmegaTest.Base
     ToySolver.Arith.Simplex
     ToySolver.Arith.Simplex.Simple
     ToySolver.Arith.Simplex.Textbook
     ToySolver.Arith.Simplex.Textbook.LPSolver
     ToySolver.Arith.Simplex.Textbook.LPSolver.Simple
     ToySolver.Arith.Simplex.Textbook.MIPSolver.Simple
     ToySolver.Arith.VirtualSubstitution
     ToySolver.BitVector
     ToySolver.BitVector.Base
     ToySolver.BitVector.Solver
     ToySolver.EUF.CongruenceClosure
     ToySolver.EUF.EUFSolver
     ToySolver.EUF.FiniteModelFinder
     ToySolver.Combinatorial.BipartiteMatching
     ToySolver.Combinatorial.HittingSet.DAA
     ToySolver.Combinatorial.HittingSet.MARCO
     ToySolver.Combinatorial.HittingSet.Simple
     ToySolver.Combinatorial.HittingSet.HTCBDD
     ToySolver.Combinatorial.HittingSet.InterestingSets
     ToySolver.Combinatorial.HittingSet.SHD
     ToySolver.Combinatorial.HittingSet.FredmanKhachiyan1996
     ToySolver.Combinatorial.HittingSet.GurvichKhachiyan1999
     ToySolver.Combinatorial.HittingSet.Util
     ToySolver.Combinatorial.Knapsack.BB
     ToySolver.Combinatorial.Knapsack.DPDense
     ToySolver.Combinatorial.Knapsack.DPSparse
     ToySolver.Combinatorial.SubsetSum
     ToySolver.Converter
     ToySolver.Converter.Base
     ToySolver.Converter.GCNF2MaxSAT
     ToySolver.Converter.ObjType
     ToySolver.Converter.MIP2PB
     ToySolver.Converter.MIP2SMT
     ToySolver.Converter.NAESAT
     ToySolver.Converter.PB
     ToySolver.Converter.PB2IP
     ToySolver.Converter.PB2LSP
     ToySolver.Converter.PBSetObj
     ToySolver.Converter.PB2SMP
     ToySolver.Converter.QBF2IPC
     ToySolver.Converter.QUBO
     ToySolver.Converter.SAT2MIS
     ToySolver.Converter.SAT2KSAT
     ToySolver.Converter.SAT2MaxCut
     ToySolver.Converter.SAT2MaxSAT
     ToySolver.Converter.Tseitin
     ToySolver.Data.AlgebraicNumber.Complex
     ToySolver.Data.AlgebraicNumber.Real
     ToySolver.Data.AlgebraicNumber.Root
     ToySolver.Data.AlgebraicNumber.Sturm
     ToySolver.Data.Boolean
     ToySolver.Data.BoolExpr
     ToySolver.Data.Delta
     ToySolver.Data.DNF
     ToySolver.Data.FOL.Arith
     ToySolver.Data.FOL.Formula
     ToySolver.Data.IntVar
     ToySolver.Data.LA
     ToySolver.Data.LA.FOL
     ToySolver.Data.LBool
     ToySolver.Data.OrdRel
     ToySolver.Data.Polynomial
     ToySolver.Data.Polynomial.Factorization.FiniteField
     ToySolver.Data.Polynomial.Factorization.Hensel
     ToySolver.Data.Polynomial.Factorization.Hensel.Internal
     ToySolver.Data.Polynomial.Factorization.Integer
     ToySolver.Data.Polynomial.Factorization.Kronecker
     ToySolver.Data.Polynomial.Factorization.Rational
     ToySolver.Data.Polynomial.Factorization.SquareFree
     ToySolver.Data.Polynomial.Factorization.Zassenhaus
     ToySolver.Data.Polynomial.GroebnerBasis
     ToySolver.Data.Polynomial.Interpolation.Hermite
     ToySolver.Data.Polynomial.Interpolation.Lagrange
     ToySolver.FileFormat
     ToySolver.FileFormat.Base
     ToySolver.FileFormat.CNF
     ToySolver.Graph.Base
     ToySolver.Graph.ShortestPath
     ToySolver.Graph.MaxCut
     ToySolver.QBF
     ToySolver.QUBO
     ToySolver.SAT
     ToySolver.SAT.Encoder.Integer
     ToySolver.SAT.Encoder.PB
     ToySolver.SAT.Encoder.PB.Internal.Adder
     ToySolver.SAT.Encoder.PB.Internal.BDD
     ToySolver.SAT.Encoder.PB.Internal.Sorter
     ToySolver.SAT.Encoder.PBNLC
     ToySolver.SAT.Encoder.Cardinality
     ToySolver.SAT.Encoder.Cardinality.Internal.Naive
     ToySolver.SAT.Encoder.Cardinality.Internal.ParallelCounter
     ToySolver.SAT.Encoder.Cardinality.Internal.Totalizer
     ToySolver.SAT.Encoder.Tseitin
     ToySolver.SAT.ExistentialQuantification
     ToySolver.SAT.MUS
     ToySolver.SAT.MUS.Enum
     ToySolver.SAT.MUS.Types
     ToySolver.SAT.PBO
     ToySolver.SAT.PBO.Context
     ToySolver.SAT.PBO.BC
     ToySolver.SAT.PBO.BCD
     ToySolver.SAT.PBO.BCD2
     ToySolver.SAT.PBO.MSU4
     ToySolver.SAT.PBO.UnsatBased
     ToySolver.SAT.Solver.CDCL
     ToySolver.SAT.Solver.CDCL.Config
     ToySolver.SAT.Solver.MessagePassing.SurveyPropagation
     ToySolver.SAT.Solver.SLS.ProbSAT
     ToySolver.SAT.Solver.SLS.UBCSAT
     ToySolver.SAT.Store.CNF
     ToySolver.SAT.Store.PB
     ToySolver.SAT.TheorySolver
     ToySolver.SAT.Types
     ToySolver.SAT.Printer
     ToySolver.SDP
     ToySolver.SMT
     ToySolver.Text.CNF
     ToySolver.Text.GCNF
     ToySolver.Text.QDimacs
     ToySolver.Text.SDPFile
     ToySolver.Text.WCNF
     ToySolver.Internal.Data.IndexedPriorityQueue
     ToySolver.Internal.Data.IOURef
     ToySolver.Internal.Data.PriorityQueue
     ToySolver.Internal.Data.SeqQueue
     ToySolver.Internal.Data.Vec
     ToySolver.Internal.ProcessUtil
     ToySolver.Internal.TextUtil
     ToySolver.Internal.Util
     ToySolver.Wang
     ToySolver.Version
  Other-Modules:
     ToySolver.Converter.PB.Internal.LargestIntersectionFinder
     ToySolver.Converter.PB.Internal.Product
     ToySolver.Data.AlgebraicNumber.Graeffe
     ToySolver.Data.Polynomial.Base
     ToySolver.SAT.MUS.Base
     ToySolver.SAT.MUS.Deletion
     ToySolver.SAT.MUS.Insertion
     ToySolver.SAT.MUS.QuickXplain
     ToySolver.SAT.MUS.Enum.Base
     ToySolver.SAT.MUS.Enum.CAMUS
     ToySolver.Version.TH
     Paths_toysolver
  autogen-modules:
     Paths_toysolver
  ghc-options: -g2
  -- GHC-Prof-Options: -auto-all

Foreign-Library     toysat-ipasir
  type:             native-shared
  if os(Windows)
    options: standalone
    mod-def-file: app/toysat-ipasir/ipasir.def
  build-depends:
    base,
    containers,
    toysolver
  hs-source-dirs:   app/toysat-ipasir
  include-dirs:     app/toysat-ipasir
  c-sources:        app/toysat-ipasir/cbits.c
  cc-options:       -Wall
  cpp-options:      -DIPASIR_SHARED_LIB -DBUILDING_IPASIR_SHARED_LIB
  ghc-options:      -g2 -debug
  includes:         ipasir.h
  other-modules:    IPASIR
  default-language: Haskell2010
